# Quant-OS

./: .dockerignore  .env.example  .gitignore  Dockerfile  INTEGRATION_TEST_REPORT.md  Makefile  api-8002.err  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  quant_os_dev.db  railway.toml
.claude/: settings.local.json
apps/api/: alembic.ini  config.py  dependencies.py  main.py  pyproject.toml  verify_quant_os_dev.db.json
apps/api/alembic/: env.py
apps/api/middleware/: correlation_id.py  error_handler.py  timing.py
apps/api/presentation/: api_response.py  router.py
apps/api/presentation/v1/: agents.py  backtest.py  factors.py  market.py  reports.py  research.py  sentiment.py  sync.py  system.py  workflows.py
apps/api/presentation/ws/: event_stream.py  workflow_stream.py
apps/api/services/: data_sync.py
apps/web/: .env.example  .gitignore  INTEGRATION_REPORT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/api/: client.ts  services.ts  types.ts
apps/web/src/components/: ChatLayout.tsx  CommandPalette.tsx  DataSyncStatus.tsx  EventStream.tsx  Header.tsx  Layout.tsx  ReportCard.tsx  Sidebar.tsx  WebSocketProvider.tsx  WorkflowProgress.tsx
apps/web/src/hooks/: useWebSocket.ts
apps/web/src/lib/: eventBus.ts  useEventBus.ts
apps/web/src/pages/: Agent.tsx  Backtest.tsx  Chat.tsx  Dashboard.tsx  FactorEngine.tsx  MarketData.tsx  Placeholder.tsx  Reports.tsx  Research.tsx  Sentiment.tsx  Trace.tsx  Workflow.tsx
apps/web/src/services/: websocketService.ts
apps/web/src/store/: agentStore.ts  backtestStore.ts  chatStore.ts  factorStore.ts  index.ts  marketStore.ts  workflowStore.ts
tests/: conftest.py
tests/unit/: test_api_contracts.py  test_backtest_signal_ranking.py  test_factor_catalog.py  test_llm_mimo_config.py  test_provider_factory.py
workers/: __init__.py  celery_app.py
workers/tasks/: __init__.py  backtest_tasks.py  data_sync_tasks.py  factor_tasks.py
(+8 files in other folders)
