[project]
name = "quant-os-api"
version = "0.1.0"
description = "AI Quant Research OS - API Server"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    # Cache
    "redis[hiredis]>=5.0.0",
    # Validation & Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Task Queue
    "celery[redis]>=5.4.0",
    # Logging
    "structlog>=24.4.0",
    # LLM
    "httpx>=0.28.0",
    "openai>=1.58.0",
    "anthropic>=0.42.0",
    # Data & Quant
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "akshare>=1.15.0",
    # Vector DB
    "qdrant-client>=1.12.0",
    # Internal packages
    "quant-os-shared",
    "quant-os-domain-market",
    "quant-os-domain-factor",
    "quant-os-domain-strategy",
    "quant-os-domain-agent",
    "quant-os-app-market",
    "quant-os-app-factor",
    "quant-os-app-backtest",
    "quant-os-app-agent",
    "quant-os-infra-market",
    "quant-os-infra-factor",
    "quant-os-infra-strategy",
    "quant-os-infra-agent",
]

[tool.uv.sources]
quant-os-shared = { workspace = true }
quant-os-domain-market = { workspace = true }
quant-os-domain-factor = { workspace = true }
quant-os-domain-strategy = { workspace = true }
quant-os-domain-agent = { workspace = true }
quant-os-app-market = { workspace = true }
quant-os-app-factor = { workspace = true }
quant-os-app-backtest = { workspace = true }
quant-os-app-agent = { workspace = true }
quant-os-infra-market = { workspace = true }
quant-os-infra-factor = { workspace = true }
quant-os-infra-strategy = { workspace = true }
quant-os-infra-agent = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_os_api"]
